# ChangeLog for dev-ruby/uglifier
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.16 2013/01/16 00:01:31 zerochaos Exp $

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org> uglifier-1.3.0.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

*uglifier-1.3.0 (24 Sep 2012)

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> +uglifier-1.3.0.ebuild:
  Version bump.

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> -uglifier-1.2.5.ebuild,
  -uglifier-1.2.6.ebuild:
  Cleanup.

*uglifier-1.2.7 (13 Aug 2012)

  13 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> +uglifier-1.2.7.ebuild:
  Version bump; simplify as the uglifyjs package is no longer required for
  testing.

  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> uglifier-1.2.6.ebuild:
  Fix name of the uglifyjs snapshot tarball.

*uglifier-1.2.6 (05 Jul 2012)

  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> +uglifier-1.2.6.ebuild:
  Version bump; enable tests by downloading a snapshot of uglifyjs for testing
  purposes only.

  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> -uglifier-1.2.4.ebuild,
  uglifier-1.2.5.ebuild:
  Cleanup old, use the new rspec support.

*uglifier-1.2.5 (28 Jun 2012)

  28 Jun 2012; Hans de Graaff <graaff@gentoo.org> +uglifier-1.2.5.ebuild:
  Version bump.

  28 Jun 2012; Hans de Graaff <graaff@gentoo.org> -uglifier-1.2.1.ebuild,
  -uglifier-1.2.2.ebuild:
  Remove old versions.

*uglifier-1.2.4 (22 Apr 2012)

  22 Apr 2012; Hans de Graaff <graaff@gentoo.org> +uglifier-1.2.4.ebuild:
  Version bump.

  05 Mar 2012; Thomas Kahle <tomka@gentoo.org> uglifier-1.2.2.ebuild:
  marked ~x86 per bug 397435

  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> uglifier-1.2.2.ebuild:
  Marked ~x64-macos

*uglifier-1.2.2 (28 Jan 2012)

  28 Jan 2012; Hans de Graaff <graaff@gentoo.org> +uglifier-1.2.2.ebuild:
  Version bump.
