@@ -1,26 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST uglifier-1.2.7.gem 53760 SHA256 418d4b1fd1520626c63c06b3a236e573246da3238f4372e919f062dcba527e27 SHA512 f66965cd59cac6f634f2ef137e875f21705a2852a980ff141eb04433180e7f6156784072a545bd9c262a77563861f1ba768aa9f5768026e69360d45c474e2ceb WHIRLPOOL 0cfe553534dda7133c69a39bb2d20d409080de87fba2c8cd265efa571c1c87dc3623fbf9c92c967278863b3c24849d4895ecce4bad454cc35d5283af4094a547
 DIST uglifier-1.3.0.gem 54272 SHA256 3aa1abee2096968e8b498f30839232a8147e297f03da8e5416c947a018c855c0 SHA512 d79421ecb2590135afa39cfdfe2be22723d3df80f2de602538ed9dd1910e2a311703ceb55d46af795916609b7482c1620fdd673d183451f7e886036f68eda6a1 WHIRLPOOL 34f83b75c850d1c35e8057bb44259d5b0bfccb7a027ab7389becf3294e177e02dc2cfcafb1091cccf91f967c43eb77c69669f8804bff6d1d05978ff2c3fdd137
-EBUILD uglifier-1.2.7.ebuild 705 SHA256 b987b00c0caca6346d6ee01b3ef3a20891887ed6645bee65da1c75a7faa3e574 SHA512 449a54894db70351da15e3d3ff30f0fb8a839a49597b42f6256265423916f9da964eeeb20224b405fd2459093c1632ac09d7ee2d6bede647decb1558b399b5da WHIRLPOOL 6d24c92162daa3b665bf0a3a911b11275eed46337d461fef5fe1e45d7a9a866d6e7b230ef495ef07303e3c5be465158225b47c1f640225a7ab1685fd248bdee2
 EBUILD uglifier-1.3.0.ebuild 710 SHA256 5afe37a0a03207dd64bc2bbee5eac4789ff888e9c253b09b38ff5723c9001763 SHA512 d49cd9c9253767b8723445f28a6a0c78e2f0b647b764ba659be7540f14be078e359b617bdd24bebcd8dc3f1240427707a27ba7d7bac44c4bc6ab0c3edc1792e7 WHIRLPOOL 0ec2fdc7ff2c394ad6421f9d33123edc089ca8453b3d04f275796c268b4616a4de4461877b7162c112691c89588ab225b2d6b2b9f463e35e94405b21478a8fd6
-MISC ChangeLog 2341 SHA256 05d31fe702b7b60b531c9696a0ab8809575af43d8d7216ebbb414bf2ba16da8d SHA512 021f837598bea9d57eb14e40de6224619307cae3c8040d00bd05dff94c6cbc1f02f049d9efd84baa8be5b58172892d916ac0c8be08cc2d1628be289fddb7f72f WHIRLPOOL 2dab7c9686458fdab444d1107bbc5c379e9f508a73b3dd9e9f3c04886c8bb576370f55017ab1a75ef81eac053a7994b83119d150f598f8bfca1dfe465c7f6bb4
+MISC ChangeLog 2424 SHA256 0b79723ea400a65214be5ea1068593b4980f1590c8206f1463f6cf4e25d99570 SHA512 00d619971bbf41a598631c46accb49cdaa9d1824a5e4897119520664a5e5fe4a5bf0e7eabf5491d7e85efcf2e21edad3c7daf278608d3e75a0b9d4ce3111718c WHIRLPOOL d7b0af4a01767cdd7cb5370f006e03e7e29efcb6805865224879181e3250d84b13c979ad13fad72736fde1177ea24881f7a7da3379bc2bd92e8d1e6775ba209f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJQ9e4eAAoJEKXdFCfdEflKbiUP/2ghlRHBRJwR4gYTOh7Rj0nu
-Q+xoLusJdubKNrZAuBoEf1Z5oi1lQpjrTIWdb9nUP1jpp6Ecw5sv5uqQoT8f4aQT
-IRUFlRtw5HJYuJn5ADT9WOk2jxqQVVDEhW+6CslLMi1sqqiIROzrc4JVX/uASbPd
-z2snjObjhcnch+GrKtodQMpYJ6XzYlZeoYDA88n/ufh4/PAaJcOLlhk3IISvuFaw
-rK3dJhZ4XSfgbHuDDXFrtXblI3plx19Dr8NvPeGc76uLGVp4DumwvPl4ITYAX0EC
-wFtMJLNhCyzXe36Vy9saqA9RArPKb5ke6Y/ytM/NE4sokSRN0Hl/c5WwET0Y/8Tu
-O+36uGx9G2et48avRL+AYWqPFnqnnwjm9sLp4Dkp3yBy3jEp+bo31O9tOG0rIdeD
-AVbs0dglHgpBp/bm2HSzzay+9gU4wR5DX6+tQCZT1LRJXkj0VVCy5Xw0/y0Nw9Fe
-syi8zVJq4giM6fQe32E5uBHn2I6kgZjVmj2OsAY82enHzTt3swmSQ8sygbSyZrFS
-V8TBT3uoqBnyBxUCxumQyChG278mQOQxfISJIcJgNi73aKqGfUu1Q5k2LR91vAFJ
-pYnjU6f6+0K/lAdMt/TC+wRyQOfn+MC1Ey3QeQ3D4AmxtF7lsL/EDlgvV7evdd6Y
-fZGCCvlXvxkZUL3yI810
-=oF72
+iF4EAREIAAYFAlF0ymMACgkQiIP6VqMIqNfaSQEAiirZK8n0oRPjVxMuwWHs/0e+
+Vr4vexzUFEvIfSnyqwgA/2xsQ+I014rIEficMh/4QOYgVs/Q8GpQrM37Rz/DxZJc
+=yye+
 -----END PGP SIGNATURE-----
