@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST unf-0.0.5.gem 118272 SHA256 27be496f67bbb460d581ce2ad113c6766a609b2781c170c232d8f074ef79e37c SHA512 f3f7b0ba3401f1b2563612b72d6d7628b7895b4b19d00feec72594a70e14198792e6faa2de2b3d4fa9096e531a83b6485d0493d18c5190ad98cb2bca494cdb73 WHIRLPOOL 8460b050950577849d264e6e591819a660e3b281ca7aaa0f55312b3f30506535111b03ca96ec931fa96d2dd578dd2d2f22ddf4bec409a369497690bb1c541932
+DIST unf-0.1.1.gem 119808 SHA256 ee54b0166568bb428b5128af446955b3109621f99aad35ab5b73011edc3cefe0 SHA512 089e5af46462d7f2cf784cd6c0a6d867c83a32148293f73d43d5bf4c233397cfdd8c004e88318fda5ba4137c9aa271cc1f3529eb5571c56eac0f43dcc12740da WHIRLPOOL bbf54da0c1c64b75fcbdc7206175ce85245e52cded7fcc3c500b412d5e72828389db4a98d347d9095a698dd132074a36f85dba7f25cbcbd49d2baa261df64e3e
 EBUILD unf-0.0.5-r1.ebuild 1613 SHA256 41c3733cfa075c2c898c376854682e568b7790eb5c57e3c388b1d3770f772af3 SHA512 ebb5dd3d913655bffdc328818fb2d3319f476451c2b0af26380d640a1fadec09dc65c6f498d1a3d22ad544569b8bf04ba94b23ba8a09790c031fe63a18333bd2 WHIRLPOOL 3fe46bbdf9c124b4464419adc6db124a1a4389685050138245d74ff91efe92eed8f3be38531f641044fa033acb725f3612bc4734c553a63b566b282fb0ce5b88
-MISC ChangeLog 1120 SHA256 6d8c7fc9e8c3791aeeafa043946caf1dfd699cc5a5eb573779f2cbe4138cc45a SHA512 40240f8a207d06299dbe3eeb846954c281dc199922fbc7f17a443c48afa7ab914a2f0b9840089d90768216a412b4b8250ddc84c2eb28f2f1387eea789d2e9554 WHIRLPOOL 8b7ea42fc582fa297d6f0b4081f772cb6c90d22db00988d3aa62b01f16f55770219a38d0cdab9ba6e18019b952953345b2aeae3a7479a6a8e3276503415d8033
+EBUILD unf-0.1.1.ebuild 1605 SHA256 ba70959ce9feb857d1a1c78cb6c297408393483a697e1cad1f055e277b1816f9 SHA512 ea15b79b6870ce0e835f3c747abc70f3890e7040845efdfc7ff65da6fc63b7094bf592d4f5369abe880971e8a125821b471c3a0e2fddd4e9229ce862b35521c8 WHIRLPOOL 8ff8b53b00661bdb540c746a30655995d4a42b372e6d3b7c3b17e16dcf7bb1612c744e09c91cdfbc91dd593ccfe78d1003785bdae883b5d8303bd9648b45d231
+MISC ChangeLog 1233 SHA256 9626195ae22cfc27007d0fbe28603e3d64e9f4bdb904ec02ce6278bc91b44d42 SHA512 96f053d2c63ddee68a1e2e886663c48c22cc21250749a301153796ced059de9f5c451f66d4cf8c6c5b6cef4bb6e6164eedf02f1682b7d3d1d0c565873877431c WHIRLPOOL 52adc3b434e157538689dab152eac206998d333866dcebaf1fec0a229a246037b114b5fbc42f9e9d4b73f3324a0154f6c1431633c329f8eb043258e9dd486963
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlCybsEACgkQid6yGVZcMrzXCAEAigJOLSsoOYkhMOhzGSXrxJ2Z
-yH/sIoHYsM6a/eQFm1QBAJipZAFuNT7AsYZY42YDLem23l/a6BzhiKpMTLRWoupt
-=+TJX
+iF4EAREIAAYFAlF0y+oACgkQiIP6VqMIqNfnBwD+NMm8fRlddnpzdNRjBj7TtUP7
+x6ZCChN82WKDTc5kbfAA/jtcf0JGIZ5KWpKbayDwRWZr50oM8vptLBa4g7gWY1rn
+=p75A
 -----END PGP SIGNATURE-----
