@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST unf_ext-0.0.5.gem 396288 SHA256 92a885c5e9721a3f91f1c7cc3bcde8a7a71d9a8fb6f5c1a5f361bbe814a7a7a9 SHA512 ad684576ce3be418c0b64d1cd43d4d1aadd8a05339e531b1d019d00dd5ae5d8340b18ba22366a4957ec03c81f13535a202ca4149a85bcd579eed1c801e979cdd WHIRLPOOL 45d0fac084aa319a85c41d929bfac3bcde9dc66c2e8a14d51b9e883ec7afb4d6bb65e1fbbe8a59d2ec6f7a84223029570841c56ba1c43a277bc684e79a0bcfb0
+DIST unf_ext-0.0.6.gem 395264 SHA256 afcdba30a57665a4540c5d43b2833c6a3677a3296428fa70fbd7b4c8feaceb1f SHA512 ae6df02589e0ce4189127836bdc18f7cc2f1c7f7fd2647f0b8d0a80f1175ad1f682a983195527e4f0b50b685de0aaf9377b7c5e955dc49d802176b2db63fc869 WHIRLPOOL 25d54eb777e00b4c96c87079159e05a94c5507d1f165fec6803337f9f4c7f0b8069d578702f5dc2ab0ae05c89b6cbab8b28aa29fbd6d18082c903a0af6cc06df
 EBUILD unf_ext-0.0.5.ebuild 1105 SHA256 c171da7cf5d132d817fef73f41d0dfa384cb375e9791429feeb43be520109c94 SHA512 7f95895dece4da2d44d802bff313616f7713a3025f005b595586499f900b3974817b3e47fee05b21dd83dd6a8534f6796a238caf4aec248fe8c6a4ca18badc22 WHIRLPOOL 102dfb552b253bc5e0f72ffdc6dfc30b66cc23c9fb0c64b904dc8c226715ffa88daa4e2cb5b95893afa55c4bbad2c90b80ee284c9760b299408f019d5f76ed09
-MISC ChangeLog 1150 SHA256 499d367e160474f8596cbc2e4cc27ec92f1711245d6b55d4908238c525972f5f SHA512 6930d2e0ed2f9a0890003b3e06b77d0785b068234f59f0189d81a0b620133c44edaf9d8a6a1def8756176f996cc402924efda6f326345c79d0e0d2cbd6cb3313 WHIRLPOOL 6c5836735f589c15af812e16b64072d28986dace4dfeceb56a8be2e9778ec7085db000e0cc347b18218052203178bdc9bb29b500737dde7eeae8e15cb96ffcd5
+EBUILD unf_ext-0.0.6.ebuild 1094 SHA256 984a65fe09f6a301ac52a2659ee9c736653510ff24d274718df7803505e40399 SHA512 e6bc640f612b7ba3eecfaa80806704d565b2fba0e78becd529c514388fe85556f4b6dbb3c944e28f25c4b4c1dd9b872cc12d262a29b3c7ade810393a039128b2 WHIRLPOOL e77bcc03aa734f867bb84691bc063a0aac9d6b9b5eaeb9ce8cee96921d0b7aa87d1930b4498cf6a32ae3f036c415e27c06b8edaf2fbfe5fec02c54c7c58a26f1
+MISC ChangeLog 1271 SHA256 b7a4015c34a13a99d6febf357b7fe89c414bf37f4082baf0992caa7ff606a5a0 SHA512 702945f98beebe4be251406ca25d901aa9afa9c674ac0b7f8d7d7c9cbd7746dc0bb9ecc17d539b113dbd15b83203190c168049d78deeb9df42fc00491f10492c WHIRLPOOL c6592d9a390f9b79a18f7f1f2ac524f9ca8afb7f1e5770e133389055c0f3cf7a54f46599ac808a6e02cd1566857c56d0de534d356aeea776801df917e86aa1ca
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlCybXUACgkQid6yGVZcMrz9mwEAtbmNGmBQPXxXVzN9QUx/MeyV
-aJ+fuGT5mlXCbx8E3acBAK/naIDUSLzTTDYfwpxez8F+MEFpASF09PvRrN1dTt27
-=5Lk+
+iF4EAREIAAYFAlF0zZsACgkQiIP6VqMIqNdpUAD9GMCrbw8o2shucyho5au6zHCn
+1e24q1LRXW1kqTcOBFEA/2x5osZHI0E9jE4kqIHpe9rNtGd/MReNVKe4X4cqs6kb
+=sg5K
 -----END PGP SIGNATURE-----
