@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby18? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby18] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby19] ) ruby_targets_ree18? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ree18] >=dev-ruby/multi_json-1.0.2[ruby_targets_ree18] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby18? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ree18? ( test? ( dev-ruby/rspec:2[ruby_targets_ree18] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] ) )
-DESCRIPTION=Ruby wrapper for UglifyJS JavaScript compressor.
-EAPI=4
-HOMEPAGE=https://github.com/lautis/uglifier
-IUSE=test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_ree18 test test
-KEYWORDS=~amd64 ~x86 ~x64-macos
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby18? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby18] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby19] ) ruby_targets_ree18? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ree18] >=dev-ruby/multi_json-1.0.2[ruby_targets_ree18] ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ree18? ( dev-lang/ruby-enterprise:1.8 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ree18? ( virtual/rubygems[ruby_targets_ree18] )
-REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_ree18 )
-SLOT=0
-SRC_URI=mirror://rubygems/uglifier-1.2.7.gem
-_eclasses_=eutils	36e6377b0e31856b6d62af831661c4f3	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	d2a1d4e0903b29b09c892b21b79fcf46	ruby-ng	10ca07a887e226622062d89bb959a175	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=dd831000d46f255cfbcc9fd7aacc20cd
