@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby18? ( dev-ruby/unf_ext[ruby_targets_ruby18] ) ruby_targets_ruby19? ( dev-ruby/unf_ext[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( test? ( >=dev-ruby/test-unit-2.5.1-r1[ruby_targets_ruby18] dev-ruby/shoulda[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/test-unit-2.5.1-r1[ruby_targets_ruby19] dev-ruby/shoulda[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( >=dev-ruby/test-unit-2.5.1-r1[ruby_targets_jruby] dev-ruby/shoulda[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+DESCRIPTION=A wrapper library to bring Unicode Normalization Form support to Ruby/JRuby.
+EAPI=5
+HOMEPAGE=https://github.com/knu/ruby-unf
+IUSE=test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_jruby test
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+LICENSE=BSD-2
+RDEPEND=ruby_targets_ruby18? ( dev-ruby/unf_ext[ruby_targets_ruby18] ) ruby_targets_ruby19? ( dev-ruby/unf_ext[ruby_targets_ruby19] ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_jruby )
+SLOT=0
+SRC_URI=mirror://rubygems/unf-0.1.1.gem
+_eclasses_=eutils	36e6377b0e31856b6d62af831661c4f3	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	d2a1d4e0903b29b09c892b21b79fcf46	ruby-ng	10ca07a887e226622062d89bb959a175	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=376e99a929bb7143a6600e7f606a5c48
