@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby18? ( test? ( >=dev-ruby/test-unit-2.5.1-r1[ruby_targets_ruby18] dev-ruby/shoulda[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/test-unit-2.5.1-r1[ruby_targets_ruby19] dev-ruby/shoulda[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DESCRIPTION=Unicode Normalization Form support library for CRuby
+EAPI=5
+HOMEPAGE=http://sourceforge.jp/projects/unf/
+IUSE=doc test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 doc test
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 )
+SLOT=0
+SRC_URI=mirror://rubygems/unf_ext-0.0.6.gem
+_eclasses_=eutils	36e6377b0e31856b6d62af831661c4f3	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	d2a1d4e0903b29b09c892b21b79fcf46	ruby-ng	10ca07a887e226622062d89bb959a175	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=8c9d284d61a6e035e701d2ebe78b2e79
