@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/unf
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/unf/ChangeLog,v 1.6 2012/11/25 19:17:18 tomka Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/unf/ChangeLog,v 1.7 2013/04/22 05:34:33 graaff Exp $
+
+*unf-0.1.1 (22 Apr 2013)
+
+  22 Apr 2013; Hans de Graaff <graaff@gentoo.org> +unf-0.1.1.ebuild:
+  Version bump.
 
   25 Nov 2012; Thomas Kahle <tomka@gentoo.org> unf-0.0.5-r1.ebuild:
   marked ~x86 per bug 432830
