@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/unf_ext
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/unf_ext/ChangeLog,v 1.7 2012/11/25 19:11:48 tomka Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/unf_ext/ChangeLog,v 1.8 2013/04/22 05:41:46 graaff Exp $
+
+*unf_ext-0.0.6 (22 Apr 2013)
+
+  22 Apr 2013; Hans de Graaff <graaff@gentoo.org> +unf_ext-0.0.6.ebuild:
+  Version bump.
 
   25 Nov 2012; Thomas Kahle <tomka@gentoo.org> unf_ext-0.0.5.ebuild:
   marked ~x86 per bug 432830
