@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/uglifier
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.16 2013/01/16 00:01:31 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.17 2013/04/22 05:27:52 graaff Exp $
+
+  22 Apr 2013; Hans de Graaff <graaff@gentoo.org> -uglifier-1.2.7.ebuild:
+  Cleanup.
 
   16 Jan 2013; Rick Farina <zerochaos@gentoo.org> uglifier-1.3.0.ebuild:
   adding ~arm keywords to net-analyzer/metasploit rdeps
